# py

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  HERMES_PORT_PLAN.md  HERMES_STATUS.md  Makefile  OPTIMIZATION_SUMMARY.md  PERFORMANCE_PLAN.md  PERFORMANCE_REPORT.md  PORT_PLAN.md  README.md  STATUS.md  TEST_REPORT.md  echo  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  lint.yml  release.yml
benchmarks/: __init__.py  memory_benchmarks.py  run_benchmarks.py
docs/: README.md
docs/api/: pi_agent_core.md  pi_ai.md  pi_coding_agent.md  pi_mom.md  pi_pods.md  pi_tui.md  pi_web_ui.md
docs/architecture/: agent-loop.md  providers.md  tools.md
docs/guides/: configuration.md  getting-started.md  providers.md  tools.md
examples/: basic_chat.py  coding_agent.py  custom_tool.py  slack_bot.py  vllm_pods.py  web_ui.py
