[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "pi-mono-python"
version = "0.1.0"
description = "Pi Mono Python - Clean TypeScript to Python port of the pi-mono ecosystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Pi Team", email = "team@pi.dev"},
]
keywords = ["pi", "agent", "ai", "tui", "web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.hatch.version]
path = "packages/pi_agent_core/src/pi_agent_core/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/pi_ai/src/pi_ai",
    "packages/pi_agent_core/src/pi_agent_core",
    "packages/pi_tui/src/pi_tui",
    "packages/pi_coding_agent/src/pi_coding_agent",
    "packages/pi_mom/src/pi_mom",
    "packages/pi_pods/src/pi_pods",
    "packages/pi_web_ui/src/pi_web_ui",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3.0",
    "pre-commit>=3.6",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml {args}"
lint = "ruff check packages/"
format = "ruff format packages/"
typecheck = "mypy packages/"
all = ["format", "lint", "typecheck", "test"]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["packages"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true
strict_optional = true
show_error_codes = true
namespace_packages = false
explicit_package_bases = false
mypy_path = "packages"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3.0",
    "black>=24.0",
    "pre-commit>=3.6",
    "build>=1.0",
    "twine>=5.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "types-requests>=2.31",
    "types-python-dateutil>=2.8",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
